--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:inputType="textMultiLine"
+            android:lines="8"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:hint="Contenu"
